# GStreamer-Rust-Demo

./: Cargo.toml  readme.md
src/: main.rs
