[package]
name = "gstreamer-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.21"
anyhow = "1.0"
#gstreamer-video = "0.21"
#gstreamer-app = "0.21"
#opencv = { version = "0.88", features = ["highgui"] }
